# customer-support-assistant

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: initial_migration.py
scripts/: db.sh
src/: __init__.py  main.py
src/api/: deps.py
src/api/v1/: api.py
src/api/v1/endpoints/: auth.py  tickets.py
src/core/: config.py  security.py
src/db/: session.py
src/models/: base.py  models.py
src/schemas/: ticket.py  user.py
src/services/: ai.py  base.py  ticket.py  user.py
